// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Anchor Render render items and ignore jsx children 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <div
      class="css-var-root g-anchor-css-var g-anchor-wrapper"
      style="max-height: 100vh;"
    >
      <div
        class="g-anchor"
      >
        <span
          class="g-anchor-ink"
        />
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#anchor-demo-basic"
            title="Item Basic Demo"
          >
            Item Basic Demo
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor Render renders items correctly 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <div
      class="css-var-root g-anchor-css-var g-anchor-wrapper"
      style="max-height: 100vh;"
    >
      <div
        class="g-anchor"
      >
        <span
          class="g-anchor-ink"
        />
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#anchor-demo-basic"
            title="Item Basic Demo"
          >
            Item Basic Demo
          </a>
        </div>
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#anchor-demo-static"
            title="Static demo"
          >
            Static demo
          </a>
        </div>
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#api"
            title="API"
          >
            API
          </a>
          <div
            class="g-anchor-link"
          >
            <a
              class="g-anchor-link-title"
              href="#anchor-props"
              title="Anchor Props"
            >
              Anchor Props
            </a>
            <div
              class="g-anchor-link"
            >
              <a
                class="g-anchor-link-title"
                href="#link-props"
                title="Link Props"
              >
                Link Props
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor Render renders items correctly#horizontal 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <div
      class="css-var-root g-anchor-css-var g-anchor-wrapper"
      style="max-height: 100vh;"
    >
      <div
        class="g-anchor"
      >
        <span
          class="g-anchor-ink"
        />
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#anchor-demo-basic"
            title="Item Basic Demo"
          >
            Item Basic Demo
          </a>
        </div>
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#anchor-demo-static"
            title="Static demo"
          >
            Static demo
          </a>
        </div>
        <div
          class="g-anchor-link"
        >
          <a
            class="g-anchor-link-title"
            href="#api"
            title="API"
          >
            API
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor Render rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <div
      class="css-var-root g-anchor-css-var g-anchor-wrapper g-anchor-rtl"
      style="max-height: 100vh;"
    >
      <div
        class="g-anchor"
      >
        <span
          class="g-anchor-ink"
        />
      </div>
    </div>
  </div>
</div>
`;
